--- a/JavaScript 作品20180920/Sharing..html
+++ b/JavaScript 作品20180920/Sharing..html
@@ -24,8 +24,8 @@
 	</div>
 	<div class="contents">
 		<div class="left-side">
-			<p>Share HTML,CSS,JavaScript,Java,PHP technic and trick with others.</p>
-			<p class="timer">Limit of Sign Up<br><span id="day"></span>days,<span id="hour"></span>h,<span id="min"></span>min<!-- s --></p>
+			<p>Share HTML/CSS, JavaScript, jQuery technic and some trick.</p>
+			<p class="timer">Limit of Sign Up<br><span id="day"></span>days,<span id="hour"></span>h,<span id="min"></span>min,<span id="sec"></span>sec</p>
 		</div>
 		<div class="right-side">
 			<h2>Sign Up</h2>
@@ -43,12 +43,21 @@
 		</div>
 	</div>
 	<section>
-		<hr>
 		<h2 id="about">About</h2>
 		<article>
-			<p><a href="#">『"Share with"』</a>　This site is Infomation Sharing site. You can share HTML,CSS,JavaScript,Java,PHP infomation for others and also you can ask to others about some technic or trick.</p>
+		<p>Share with is Infomation Sharing site. You can share infomation about HTML,CSS,JavaScript,Java,PHP etc... also you can ask infomation and technic or some trick.</p>
 		</article>
 	</section>
+	<section id="comment">
+		<h2>Comment</h2>
+		<h3>Name</h3>
+		<input type="text" name="name" id="name" placeholder="Name" required>
+		<h3>Comment</h3>
+		<textarea name="comment" class="message" placeholder="Comment" required></textarea>
+	</section>
+	<div>
+		<button type="Comment" class="button">Comment</button>
+	</div>
 </div>
 <footer>
 	<small>(C)2018 Nori's WeD - studio.</small>
