--- a/JavaScript 作品20180920/Sharing..html
+++ b/JavaScript 作品20180920/Sharing..html
@@ -45,20 +45,28 @@
 	<section>
 		<h2 id="about">About</h2>
 		<article>
-		<p>Share with is Infomation Sharing site. You can share infomation about HTML,CSS,JavaScript,Java,PHP etc... also you can ask infomation and technic or some trick.</p>
+		<p>Share with is Infomation Sharing site. You can share infomation about HTML,CSS,JavaScript,Java,PHP etc...<br>also you can ask infomation and technic or some trick.</p>
 		</article>
 	</section>
-	<section id="comment">
+	<section class="comment">
 		<h2>Comment</h2>
-		<h3>Name</h3>
-		<input type="text" name="name" id="name" placeholder="Name" required>
-		<h3>Comment</h3>
-		<textarea name="comment" class="message" placeholder="Comment" required></textarea>
+		<textarea name="comment" id="message" placeholder="Comment" required></textarea>
 	</section>
-	<div>
-		<button type="Comment" class="button">Comment</button>
+	<div id="button">
+		<button type="submit" id="button" value="Comment">Comment</button>
 	</div>
+<!-- 	<hr>
+	<h2 class="leave-comment">leave a comment</h2>
+	<p id="output"></p> -->
 </div>
+<!-- <script>
+	document.getElementById('button').onsubmit = function(){
+	var comment = document.getElementById('message').message.value;
+	document.getElementById('output').textContent = comment
+	};
+
+	
+</script> -->
 <footer>
 	<small>(C)2018 Nori's WeD - studio.</small>
 </footer>
