--- a/JavaScript 作品20180920/Sharing..html
+++ b/JavaScript 作品20180920/Sharing..html
@@ -48,13 +48,13 @@
 		<p>Share with is Infomation Sharing site. You can share infomation about HTML,CSS,JavaScript,Java,PHP etc...<br>also you can ask infomation and technic or some trick.</p>
 		</article>
 	</section>
-	<section class="comment">
+<!-- 	<section class="comment">
 		<h2>Comment</h2>
 		<textarea name="comment" id="message" placeholder="Comment" required></textarea>
 	</section>
 	<div id="button">
 		<button type="submit" id="button" value="Comment">Comment</button>
-	</div>
+	</div> -->
 <!-- 	<hr>
 	<h2 class="leave-comment">leave a comment</h2>
 	<p id="output"></p> -->
