--- a/JavaScript 作品20180920/Sharing..html
+++ b/JavaScript 作品20180920/Sharing..html
@@ -25,7 +25,7 @@
 	<div class="contents">
 		<div class="left-side">
 			<p>Share HTML,CSS,JavaScript,Java,PHP technic and trick with others.</p>
-			<p class="timer">Limit of Sign Up<br><span id="day"></span>days,<span id="hour"></span>h,<span id="min"></span>min<!-- s --></p>
+			<p class="timer">Limit of Sign Up<br><span id="day"></span>days,<span id="hour"></span>h,<span id="min"></span>min</p>
 		</div>
 		<div class="right-side">
 			<h2>Sign Up</h2>
