--- a/Nori'sWeD20180926/about.html
+++ b/Nori'sWeD20180926/about.html
@@ -35,8 +35,10 @@
 			<section class="profile">
 				<div class="profile-txt">
 					<h2 class="icon">Profile</h2>
-					<p><span>Name: Nori</span><br>風景、人物、食べ物など様々なものを撮影。<br>好きな写真は海に沈む夕日や朝日を撮影すること。<br>写真はすべてスマホを使って撮影。<br>HTML/CSS,JavaScript,JQuery使用可能。<br>
-					現在Webサイト制作に取り組み中。</p>
+					<p><span>Name: Nori</span>
+						<br>撮影するものは風景、人物、食べ物など様々で、
+						特に好きな写真は海に沈む夕日や朝日を撮影すること。<br>写真はすべてスマホを使って撮影。現在は職業訓練校でWebプログラマースキル習得中。<br>
+						HTML/CSS,JavaScript,JQuery使用。</p>
 				</div>
 				<img src="images/about-profile.png" alt="profile-img" class="profile-image">
 			</section>
@@ -49,11 +51,11 @@
 					</tr>
 					<tr>
 						<th>2011/02 - 2013/01</th>
-						<td>単身韓国留学</td>
+						<td>韓国留学</td>
 					</tr>
 					<tr>
 						<th>2015/02 - 2016/03</th>
-						<td>カナダでのワーキングホリデー経験</td>
+						<td>カナダ ワーキングホリデー</td>
 					</tr>
 					<tr>
 						<th>2018/07 - 2019/01</th>
