--- a/Nori'sWeD20180926/index.html
+++ b/Nori'sWeD20180926/index.html
@@ -13,7 +13,7 @@
 	<script>
 		jQuery(function($) {
 			$("#index").bgswitcher( {
-				images: ["images/bg-index-b.png","images/bg-index.png","images/bg-video.jpg","images/bg-about.jpg"],
+				images: ["images/bg-index.jpg","images/bg-video.jpg","images/bg-about.jpg","images/bg-index-b.jpg"],
 			});
 		});
 	</script>
