--- a/Nori'sWeD20180926/photograph.html
+++ b/Nori'sWeD20180926/photograph.html
@@ -66,24 +66,12 @@
 			<article id="forest">
 				<h2 class="icon">Forest</h2>
 				<ul class="photograph-list">
-					<li>
-						<a href="images/forest-pic/photograph-forest-01-big.jpg"><img src="images/forest-pic/photograph-forest-01.jpg" alt=""></a>
-					</li>
-					<li>
-						<a href="images/forest-pic/photograph-forest-02-big.jpg"><img src="images/forest-pic/photograph-forest-02.jpg" alt=""></a>
-					</li>
-					<li>
-						<a href="images/forest-pic/photograph-forest-03-big.jpg"><img src="images/forest-pic/photograph-forest-03.jpg" alt=""></a>
-					</li>
-					<li>
-						<a href="images/forest-pic/photograph-forest-04-big.jpg"><img src="images/forest-pic/photograph-forest-04.jpg" alt=""></a>
-					</li>
-					<li>
-						<a href="images/forest-pic/photo-forest-big01.jpg"><img src="images/forest-pic/photo-forest01.jpg" alt="forest"></a>
-					</li>
-					<li>
-						<a href="images/forest-pic/photo-forest-big02.jpg"><img src="images/forest-pic/photo-forest02.jpg" alt="forest"></a>
-					</li>
+					<li><a href="images/forest-pic/photograph-forest-01-big.jpg"><img src="images/forest-pic/photograph-forest-01.jpg" alt=""></a></li>
+					<li><a href="images/forest-pic/photograph-forest-02-big.jpg"><img src="images/forest-pic/photograph-forest-02.jpg" alt=""></a></li>
+					<li><a href="images/forest-pic/photograph-forest-03-big.jpg"><img src="images/forest-pic/photograph-forest-03.jpg" alt=""></a></li>
+					<li><a href="images/forest-pic/photograph-forest-04-big.jpg"><img src="images/forest-pic/photograph-forest-04.jpg" alt=""></a></li>
+					<li><a href="images/forest-pic/photo-forest-big01.jpg"><img src="images/forest-pic/photo-forest01.jpg" alt="forest"></a></li>
+					<li><a href="images/forest-pic/photo-forest-big02.jpg"><img src="images/forest-pic/photo-forest02.jpg" alt="forest"></a></li>
 				</ul>
 			</article>
 		</div>
