--- a/Nori'sWeD/photograph.html
+++ b/Nori'sWeD/photograph.html
@@ -71,7 +71,7 @@
 				<ul class="photograph-list">
 					<li><a href="images/forest-pic/photograph-forest-01-big.jpg" data-caption="Capilano Suspension Bridge"><img src="images/forest-pic/photograph-forest-01.jpg" alt=""></a></li>
 					<li><a href="images/forest-pic/photograph-forest-02-big.jpg" data-caption="Nagai Park"><img src="images/forest-pic/photograph-forest-02.jpg" alt=""></a></li>
-					<li><a href="images/forest-pic/photograph-forest-03-big.jpg" data-captio="Nabegataki"><img src="images/forest-pic/photograph-forest-03.jpg" alt=""></a></li>
+					<li><a href="images/forest-pic/photograph-forest-03-big.jpg" data-caption="Nabegataki"><img src="images/forest-pic/photograph-forest-03.jpg" alt=""></a></li>
 					<li><a href="images/forest-pic/photograph-forest-04-big.jpg" data-caption="Moraine Lake"><img src="images/forest-pic/photograph-forest-04.jpg" alt=""></a></li>
 					<li><a href="images/forest-pic/photo-forest-big01.jpg" data-caption="Stanley Park"><img src="images/forest-pic/photo-forest01.jpg" alt="forest"></a></li>
 					<li><a href="images/forest-pic/photo-forest-big02.jpg" data-caption="Unknown"><img src="images/forest-pic/photo-forest02.jpg" alt="forest"></a></li>
